--- a/bookstore-front/src/app/login/login.component.html
+++ b/bookstore-front/src/app/login/login.component.html
@@ -1,10 +1,10 @@
-<p>login works!</p>
+Please chose a user to log in with.
 <form [formGroup]="loginForm" (ngSubmit)="login()">
 <mat-form-field>
   <mat-label>Select User</mat-label>
   <mat-select formControlName="userList" placeholder="Select User">
     <mat-option *ngFor="let user of allUsers" [value]="user">
-      {{user?.firstName}}
+      {{user?.firstName}} {{user?.lastName}} {{user?.role}}
     </mat-option>
   </mat-select>
 </mat-form-field>
