--- a/bookstore-front/src/app/app.component.html
+++ b/bookstore-front/src/app/app.component.html
@@ -64,7 +64,7 @@
     display: flex;
     margin: 82px auto 32px;
     padding: 0 16px;
-    max-width: 960px;
+    max-width: 80vw;
     flex-direction: column;
     align-items: center;
   }
