--- a/bookstore-front/src/app/display-inventory/display-inventory.component.html
+++ b/bookstore-front/src/app/display-inventory/display-inventory.component.html
@@ -19,8 +19,8 @@
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
       <td mat-cell *matCellDef="let article"> {{article.title}} </td>
     </ng-container>
 
@@ -29,9 +29,46 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
       <td mat-cell *matCellDef="let article" > {{article.price}} </td>
     </ng-container>
+    <!-- Color Column -->
+    <ng-container matColumnDef="author">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Author </th>
+      <td mat-cell *matCellDef="let book" > {{book?.author}} </td>
+    </ng-container>
+
+    <!-- Color Column -->
+    <ng-container matColumnDef="isbn">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> ISBN </th>
+      <td mat-cell *matCellDef="let book" > {{book?.isbn}} </td>
+    </ng-container>
+
+    <!-- Color Column -->
+    <ng-container matColumnDef="pages">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Pages </th>
+      <td mat-cell *matCellDef="let book" > {{book?.pages}} </td>
+    </ng-container>
+    <!-- Color Column -->
+    <ng-container matColumnDef="publisher">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Publisher </th>
+      <td mat-cell *matCellDef="let game" > {{game?.publisher}} </td>
+    </ng-container>
+    <!-- Color Column -->
+    <ng-container matColumnDef="min_age">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Min age </th>
+      <td mat-cell *matCellDef="let game" > {{game?.min_age}} </td>
+    </ng-container>
+    <!-- Color Column -->
+    <ng-container matColumnDef="genre">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
+      <td mat-cell *matCellDef="let game" > {{game?.genre}} </td>
+    </ng-container>
+    <!-- Color Column -->
+    <ng-container matColumnDef="artist">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
+      <td mat-cell *matCellDef="let lp" > {{lp?.artist}} </td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="displayArticle(row)">
     </tr>
   </table>
 
