--- a/bookstore-front/src/app/inventory/inventory.component.html
+++ b/bookstore-front/src/app/inventory/inventory.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="inventory--container">
 
-<app-category-select [providedType]="providedType" (selectedType)="doChangeCategory($event)"></app-category-select>
-<app-display-inventory [articleType]="selectedCategory">
+<app-category-select [providedType]="providedType" (selectedType)="doChangeCategory($event)" class="inventory--cat-select__right"></app-category-select>
+<app-display-inventory [providedType]="selectedCategory" class="inventory--table__wide">
 
 </app-display-inventory>
 </div>
