--- a/bookstore-front/src/app/edit-article/edit-article.component.html
+++ b/bookstore-front/src/app/edit-article/edit-article.component.html
@@ -27,7 +27,7 @@
 
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="dismissChanges($event)">Dismiss</button>
+    <button mat-button type="button" (click)="dismissChanges($event)">Dismiss</button>
 <!--    <button mat-button (click)="doEdit()" *ngIf="showAdminControls" >EDIT</button>-->
 <!--    <button mat-button (click)="doDelete()" *ngIf="showAdminControls" >DELETE</button>-->
     <button mat-button type="submit">Save</button>
