edit article wip

--- a/bookstore-front/src/app/edit-article/edit-article.component.html
+++ b/bookstore-front/src/app/edit-article/edit-article.component.html
@@ -13,6 +13,30 @@
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
+    <mat-form-field appearance="fill">
+      <mat-label>Id</mat-label>
+      <input matInput placeholder="Simple placeholder" formControlName="id" >
+    </mat-form-field>
+
+    TODO ADD ALL FIELDS:
+
+    COMMON
+    FOR ARTICLE
+
+    NGIF
+
+    FOR BOOK
+
+    FOR GAME
+
+    FOR LP
+
+    TODO Lookup form validation validate
+    ISBN? YES, you've got a library for this.
+
+    Genre = make a select for each with enum
+
+    Price >=0
 
     {{article.id}}
     {{article.type}}
