--- a/bookstore-front/src/app/display-inventory/display-inventory.component.html
+++ b/bookstore-front/src/app/display-inventory/display-inventory.component.html
@@ -63,7 +63,7 @@
     </ng-container>
     <!-- Color Column -->
     <ng-container matColumnDef="artist">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Artist </th>
       <td mat-cell *matCellDef="let lp" > {{lp?.artist}} </td>
     </ng-container>
 
@@ -72,5 +72,5 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10, 25, 100]" ></mat-paginator>
 </div>
