--- a/bookstore-front/src/app/edit-article/edit-article.component.html
+++ b/bookstore-front/src/app/edit-article/edit-article.component.html
@@ -1,7 +1,3 @@
-<p>edit-article works!</p>
-
-//todo create a form
-//todo create input fields for each field in Articles
 <mat-card>
   <form [formGroup]="articleForm" (submit)="submitChanges($event)">
 
@@ -13,6 +9,13 @@
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content class="edit-article--input-fields__column">
+
+    <mat-form-field appearance="fill" class="search-form--type" *ngIf="article.id == 0">
+      <mat-label>Type</mat-label>
+      <mat-select formControlName="type" >
+        <mat-option *ngFor="let type of articleType" [value]="type">{{type}}</mat-option>
+      </mat-select>
+    </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Title</mat-label>
