--- a/bookstore-front/src/app/inventory/inventory.component.css
+++ b/bookstore-front/src/app/inventory/inventory.component.css
@@ -11,6 +11,12 @@
 }
 
 .inventory--cat-select__right {
+  flex-grow: 2;
   display: flex;
   flex-direction: row-reverse;
+}
+
+.inventory--top-bar {
+  display: flex;
+  flex-direction: row;
 }
