--- a/bookstore-front/src/app/login/login.component.html
+++ b/bookstore-front/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 Please chose a user to log in with.
-<form [formGroup]="loginForm" (ngSubmit)="login()">
+<form [formGroup]="loginForm" (ngSubmit)="login()" class="login-form--container">
 <mat-form-field>
   <mat-label>Select User</mat-label>
   <mat-select formControlName="userList" placeholder="Select User">
@@ -8,5 +8,10 @@ Please chose a user to log in with.
     </mat-option>
   </mat-select>
 </mat-form-field>
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+      <input matInput formControlName="password" type="password" >
+
+  </mat-form-field>
 <button mat-button type="submit"> Log In</button>
 </form>
