--- a/bstore-front/src/app/inventory/inventory.component.html
+++ b/bstore-front/src/app/inventory/inventory.component.html
@@ -1,3 +1,4 @@
+<!--  TODO center inventory items inside container-->
 <div class="inventory--container">
   <app-search-form [providedState]="searchState" (newSearch)="search($event)"></app-search-form>
   <div class="inventory--top-bar">
