--- a/bstore-front/src/app/toolbar/toolbar.component.html
+++ b/bstore-front/src/app/toolbar/toolbar.component.html
@@ -11,3 +11,6 @@
 <div>
   <a mat-button color="primary" routerLink="/register">Register</a>
 </div>
+<div>
+  <a mat-button color="primary" routerLink="/cart">Cart</a>
+</div>
