--- a/bstore-front/src/app/cart/cart.component.html
+++ b/bstore-front/src/app/cart/cart.component.html
@@ -1,1 +1,35 @@
 <p>cart works!</p>
+<p>Order ID {{openOrder?.orderId}}</p>
+<p>Cart Date {{openOrder?.cartDate}}</p>
+<p>Cart Total{{openOrder?.orderTotal}}</p>
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <ng-container matColumnDef="articleId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Article ID </th>
+      <td mat-cell *matCellDef="let orderItem"> {{orderItem.articleId}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="articleType">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+      <td mat-cell *matCellDef="let orderItem"> {{orderItem.articleType}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+      <td mat-cell *matCellDef="let orderItem" > {{orderItem.price}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
+      <td mat-cell *matCellDef="let orderItem" > {{orderItem.quantity}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[10, 25, 100]" ></mat-paginator>
+</div>
