--- a/bstore-front/src/app/cart/cart.component.html
+++ b/bstore-front/src/app/cart/cart.component.html
@@ -7,23 +7,31 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="articleId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Article ID </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Article ID</th>
       <td mat-cell *matCellDef="let orderItem"> {{orderItem.articleId}} </td>
     </ng-container>
 
     <ng-container matColumnDef="articleType">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type</th>
       <td mat-cell *matCellDef="let orderItem"> {{orderItem.articleType}} </td>
     </ng-container>
 
     <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-      <td mat-cell *matCellDef="let orderItem" > {{orderItem.price}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Price</th>
+      <td mat-cell *matCellDef="let orderItem"> {{orderItem.price}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
-      <td mat-cell *matCellDef="let orderItem" > {{orderItem.quantity}} </td>
+    <ng-container matColumnDef="quantity" (show)="displayQuantity">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity</th>
+      <td mat-cell *matCellDef="let orderItem" (click)="editQuantity(orderItem)">
+
+        <span *ngIf="!orderItem.editQuantity">{{orderItem?.quantity}}</span>
+        <app-edit-quantity
+          *ngIf="orderItem.editQuantity"
+          [providedItem]="orderItem"
+          (newItemEvent)="updateQuantity($event)">
+        </app-edit-quantity>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -31,5 +39,5 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[10, 25, 100]" ></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
 </div>
