--- a/bstore-front/src/app/edit-quantity/edit-quantity.component.html
+++ b/bstore-front/src/app/edit-quantity/edit-quantity.component.html
@@ -1,7 +1,15 @@
 <form [formGroup]="editQuantityForm" (ngSubmit)="submit()">
   <mat-form-field>
-    <input matInput #quantity autofocus  formControlName="quantity" type="number" (blur)="dismiss()">
+    <input matInput #quantity autofocus formControlName="quantity" type="number">
   </mat-form-field>
+  <button class="button" mat-icon-button type="submit" >
+    <mat-icon>done</mat-icon>
+  </button>
+  <button class="button" mat-icon-button type="button" (click)="dismiss()">
+    <mat-icon>cancel</mat-icon>
+  </button>
+
+
 </form>
 <!--TODO input field number-->
 <!--TODO submit icon button-->
