--- a/bstore-front/src/app/display-article/display-article.component.html
+++ b/bstore-front/src/app/display-article/display-article.component.html
@@ -18,6 +18,7 @@
     <div>{{article.type == 'book'? article?.genre: ""}}</div>
     <div>{{article.type == 'book'? article?.isbn: ""}}</div>
 
+    <app-add-review *ngIf="showAddReview" (dismissEvent)="showAddReview = false"></app-add-review>
 
   </mat-card-content>
   <mat-card-actions>
@@ -27,5 +28,16 @@
     <button mat-button (click)="doDelete()" *ngIf="showAdminControls" >DELETE</button>
     <button mat-button  (click)="addToCart()" *ngIf="!showAdminControls" >BUY</button>
     <button mat-button  (click)="addToFavorites()" *ngIf="!showAdminControls" >FAVORITE</button>
+    <button mat-button  (click)="displayAddReview()" *ngIf="!showAdminControls" >REVIEW</button>
   </mat-card-actions>
+</mat-card>
+
+<h3 class="review-card--margin"> Reviews </h3>
+<mat-card *ngFor="let review of reviews" class="review-card--margin">
+  <mat-card-header>
+    <mat-card-title>{{review.userId}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <app-display-review [review]="review"></app-display-review>
+  </mat-card-content>
 </mat-card>
