--- a/bstore-front/src/app/display-review/display-review.component.html
+++ b/bstore-front/src/app/display-review/display-review.component.html
@@ -1,7 +1,7 @@
-<p>display-review works!</p>
-<div>
+<div>Rating :
   {{review.rating}}
 </div>
 <div>
+  Description:
   {{review.description}}
 </div>
