--- a/bstore-front/src/app/display-article/display-article.component.html
+++ b/bstore-front/src/app/display-article/display-article.component.html
@@ -8,34 +8,34 @@
   </mat-card-header>
   <mat-card-content>
 
-    <div>{{article.id}}</div>
-    <div>{{article.type}}</div>
-    <div>{{article.title}}</div>
-    <div>{{article.supplierId}}</div>
-    <div>{{article.price}}</div>
-    <div>{{article.type == 'book' ? article?.author: ""}}</div>
-    <div>{{article.type == 'book'? article?.genre: ""}}</div>
-    <div>{{article.type == 'book'? article?.genre: ""}}</div>
-    <div>{{article.type == 'book'? article?.isbn: ""}}</div>
+    <div>Type: {{article.type}}</div>
+    <div>Title: {{article.title}}</div>
+    <div>Supplier: {{article.supplierId}}</div>
+    <div>Price EUR: {{article.price}}</div>
+    <div *ngIf="article.type == 'book'">Author: {{article.type == 'book' ? article?.author: ""}}</div>
+    <div *ngIf="article.type == 'book'">ISBN: {{article.type == 'book'? article?.isbn: ""}}</div>
+    <div *ngIf="article.type == 'lp'">Genre: {{article.type == 'lp'? article?.genre: ""}}</div>
+    <div *ngIf="article.type == 'game'">Genre: {{article.type == 'game'? article?.genre: ""}}</div>
 
-    <app-add-review *ngIf="showAddReview" (dismissEvent)="showAddReview = false"></app-add-review>
+    <app-add-review *ngIf="showAddReview"
+                    (dismissEvent)="showAddReview = false"></app-add-review>
 
   </mat-card-content>
   <mat-card-actions>
     <button mat-button  (click)="navigate()" >Back</button>
 <!--    <div class="flex-spacer"></div>-->
-    <button mat-button (click)="doEdit()" *ngIf="showAdminControls" >EDIT</button>
-    <button mat-button (click)="doDelete()" *ngIf="showAdminControls" >DELETE</button>
-    <button mat-button  (click)="addToCart()" *ngIf="!showAdminControls" >BUY</button>
-    <button mat-button  (click)="addToFavorites()" *ngIf="!showAdminControls" >FAVORITE</button>
-    <button mat-button  (click)="displayAddReview()" *ngIf="!showAdminControls" >REVIEW</button>
+    <button mat-button (click)="doEdit()" *ifRole="['ADMIN']">EDIT</button>
+    <button mat-button (click)="doDelete()" *ifRole="['ADMIN']">DELETE</button>
+    <button mat-button  (click)="addToCart()" *ifRole="['USER']">BUY</button>
+    <button mat-button  (click)="addToFavorites()" *ifRole="['USER']">FAVORITE</button>
+    <button mat-button  (click)="displayAddReview()" *ifRole="['USER']">REVIEW</button>
   </mat-card-actions>
 </mat-card>
+<div *ngIf="reviewsExist"><h3 class="review-card--margin" > Reviews </h3></div>
 
-<h3 class="review-card--margin"> Reviews </h3>
 <mat-card *ngFor="let review of reviews" class="review-card--margin">
   <mat-card-header>
-    <mat-card-title>{{review.userId}}</mat-card-title>
+    <mat-card-title>By User: {{review.userName}}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <app-display-review [review]="review"></app-display-review>
