--- a/bstore-front/src/app/display-inventory/display-inventory.component.html
+++ b/bstore-front/src/app/display-inventory/display-inventory.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
   <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia">
+  <input matInput (keyup)="applyFilter($event)" placeholder="Example: Soren">
 </mat-form-field>
 
 <div class="mat-elevation-z8">
@@ -54,7 +54,7 @@
     <!-- Color Column -->
     <ng-container matColumnDef="min_age">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Min age </th>
-      <td mat-cell *matCellDef="let game" > {{game?.min_age}} </td>
+      <td mat-cell *matCellDef="let game" > {{game?.minage}} </td>
     </ng-container>
     <!-- Color Column -->
     <ng-container matColumnDef="genre">
