--- a/bstore-front/src/app/toolbar/toolbar.component.html
+++ b/bstore-front/src/app/toolbar/toolbar.component.html
@@ -3,14 +3,20 @@
 </div>
 <div class="toolbar--spacer"></div>
 <div>
-  <a mat-button color="primary" routerLink="/inventory">Inventory</a>
+  <a mat-button color="primary" routerLink="/inventory" *ifRole="['USER', 'ADMIN']">Inventory</a>
 </div>
 <div>
-  <a mat-button color="primary" routerLink="/login">LOGIN</a>
+  <a mat-button color="primary" routerLink="/login" *ifRole="[]">LOGIN</a>
 </div>
 <div>
-  <a mat-button color="primary" routerLink="/register">Register</a>
+  <a mat-button color="primary" routerLink="/register" *ifRole="[]">Register</a>
 </div>
 <div>
-  <a mat-button color="primary" routerLink="/cart">Cart</a>
+  <a mat-button color="primary" routerLink="/cart" *ifRole="['USER']">Cart</a>
+</div>
+<div>
+  <a mat-button color="primary" routerLink="/article" *ifRole="['ADMIN']">Add Article</a>
+</div>
+<div>
+  <a mat-button color="primary" routerLink="/login" (click)="logout()" *ifRole="['USER', 'ADMIN']">Logout</a>
 </div>
