--- a/bstore-front/src/app/add-article/add-article.component.html
+++ b/bstore-front/src/app/add-article/add-article.component.html
@@ -23,7 +23,7 @@
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Price</mat-label>
-        <input matInput formControlName="price" >
+        <input matInput formControlName="price" type="number" >
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Supplier Id</mat-label>
