--- a/bstore-front/src/app/edit-article/edit-article.component.html
+++ b/bstore-front/src/app/edit-article/edit-article.component.html
@@ -81,7 +81,8 @@
       && articleForm.controls['type'].value == 'all')">
         Please select Article type </div>
       <div *ngIf="(articleForm.controls['type'].value == ('lp' || 'game') && articleForm.controls['genre'].pristine)"> Please Select Genre </div>
-      <div *ngIf="!articleForm.controls['isbn'].valid"> Try correct isbn: 4873113369 </div>
+      <div *ngIf="!articleForm.controls['isbn'].valid"> Try correct isbn: 9780140445770 or 9788371815102
+      </div>
 
     </div>
 
