--- a/bstore-front/src/app/display-inventory/display-inventory.component.html
+++ b/bstore-front/src/app/display-inventory/display-inventory.component.html
@@ -72,5 +72,12 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[10, 25, 100]" ></mat-paginator>
+<!--  <mat-paginator [pageSizeOptions]="[10, 25, 100]" ></mat-paginator>-->
+  <mat-paginator #paginator
+                 [length]="totalArticles"
+                 [pageSizeOptions]="[5, 10, 20, 50, 100]"
+                 [pageIndex]="currentPage"
+                 (page)="getNext($event)"
+                 showFirstLastButtons="true">
+  </mat-paginator>
 </div>
