--- a/bstore-front/src/app/display-inventory/display-inventory.component.css
+++ b/bstore-front/src/app/display-inventory/display-inventory.component.css
@@ -10,3 +10,13 @@ table {
 td, th {
   width: 25%;
 }
+
+.filter-field__flexbox{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.inputField {
+  flex: 1;
+}
