--- a/bstore-front/src/app/display-inventory/display-inventory.component.html
+++ b/bstore-front/src/app/display-inventory/display-inventory.component.html
@@ -1,8 +1,12 @@
-<mat-form-field>
+<div class="filter-field__flexbox">
+<mat-form-field class="inputField">
   <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Example: Soren">
+  <input matInput (keyup)="applyFilter($event)"
+         [value]="articleService.filterValue.value"
+         placeholder="Example: Soren">
 </mat-form-field>
-
+<mat-icon (click)="articleService.filterValue.next('')">cancel</mat-icon>
+</div>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
 
