--- a/bstore-front/src/app/inventory/inventory.component.html
+++ b/bstore-front/src/app/inventory/inventory.component.html
@@ -1,6 +1,6 @@
 <!--  TODO center inventory items inside container-->
 <div class="inventory--container">
-  <app-search-form [providedState]="searchState" (newSearch)="search($event)"></app-search-form>
+  <app-search-form></app-search-form>
   <div class="inventory--top-bar">
     <button mat-flat-button (click)="findAll()">Reload All</button>
     <button mat-flat-button (click)="addArticle()" *ifRole="['ADMIN']">Add Article</button>
