--- a/bstore-front/src/app/cart/cart.component.html
+++ b/bstore-front/src/app/cart/cart.component.html
@@ -32,7 +32,7 @@
 
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Title</th>
-          <td mat-cell *matCellDef="let orderItem"> {{orderItem.title}} </td>
+          <td mat-cell *matCellDef="let orderItem"> {{orderItem.article?.title}} </td>
         </ng-container>
 
         <ng-container matColumnDef="price">
@@ -67,7 +67,11 @@
         </tr>
       </table>
 
-      <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+      <mat-paginator [length]="totalArticles"
+                     [pageSizeOptions]="[5, 10, 20, 50, 100]"
+                     [pageIndex]="currentPage"
+                     (page)="getNext($event)"
+                     showFirstLastButtons="true"></mat-paginator>
     </div>
   </mat-card-content>
   <mat-card-actions>
