--- a/bstore-front/src/app/inventory/inventory.component.html
+++ b/bstore-front/src/app/inventory/inventory.component.html
@@ -2,7 +2,7 @@
 <div class="inventory--container">
   <app-search-form></app-search-form>
   <div class="inventory--top-bar">
-    <button mat-flat-button (click)="findAll()">Reload All</button>
+<!--    <button mat-flat-button (click)="findAll()">Reload All</button>-->
     <button mat-flat-button (click)="addArticle()" *ifRole="['ADMIN']">Add Article</button>
     <app-category-select [providedType]="providedType" (selectedType)="doChangeCategory($event)"
                          class="inventory--cat-select__right"></app-category-select>
