--- a/bstore-front/src/app/display-inventory/display-inventory.component.html
+++ b/bstore-front/src/app/display-inventory/display-inventory.component.html
@@ -5,10 +5,10 @@
          [value]="articleService.filterValue.value"
          placeholder="Example: Soren">
 </mat-form-field>
-<mat-icon (click)="articleService.filterValue.next(' ')">cancel</mat-icon>
+<mat-icon (click)="articleService.filterValue.next('')">cancel</mat-icon>
 </div>
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
+  <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
