--- a/bstore-front/src/app/cart/cart.component.html
+++ b/bstore-front/src/app/cart/cart.component.html
@@ -62,6 +62,12 @@
           <td mat-cell *matCellDef="let orderItem"> {{orderItem.quantity * orderItem.price}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Total</th>
+          <td mat-cell *matCellDef="let orderItem">
+            <mat-icon (click)="deleteOrderItem(orderItem)">delete</mat-icon> </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;">
         </tr>
