--- a/bstore-front/src/app/display-inventory/display-inventory.component.html
+++ b/bstore-front/src/app/display-inventory/display-inventory.component.html
@@ -12,62 +12,62 @@
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+      <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let article"> {{article.id}} </td>
     </ng-container>
 
     <!-- Progress Column -->
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+      <th mat-header-cell *matHeaderCellDef> Type </th>
       <td mat-cell *matCellDef="let article"> {{article.type}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
+      <th mat-header-cell *matHeaderCellDef> Title </th>
       <td mat-cell *matCellDef="let article"> {{article.title}} </td>
     </ng-container>
 
     <!-- Color Column -->
     <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+      <th mat-header-cell *matHeaderCellDef> Price </th>
       <td mat-cell *matCellDef="let article" > {{article.price}} </td>
     </ng-container>
     <!-- Color Column -->
     <ng-container matColumnDef="author">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Author </th>
+      <th mat-header-cell *matHeaderCellDef> Author </th>
       <td mat-cell *matCellDef="let book" > {{book?.author}} </td>
     </ng-container>
 
     <!-- Color Column -->
     <ng-container matColumnDef="isbn">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ISBN </th>
+      <th mat-header-cell *matHeaderCellDef> ISBN </th>
       <td mat-cell *matCellDef="let book" > {{book?.isbn}} </td>
     </ng-container>
 
     <!-- Color Column -->
     <ng-container matColumnDef="pages">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Pages </th>
+      <th mat-header-cell *matHeaderCellDef> Pages </th>
       <td mat-cell *matCellDef="let book" > {{book?.pages}} </td>
     </ng-container>
     <!-- Color Column -->
     <ng-container matColumnDef="publisher">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Publisher </th>
+      <th mat-header-cell *matHeaderCellDef> Publisher </th>
       <td mat-cell *matCellDef="let game" > {{game?.publisher}} </td>
     </ng-container>
     <!-- Color Column -->
     <ng-container matColumnDef="min_age">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Min age </th>
+      <th mat-header-cell *matHeaderCellDef > Min age </th>
       <td mat-cell *matCellDef="let game" > {{game?.minage}} </td>
     </ng-container>
     <!-- Color Column -->
     <ng-container matColumnDef="genre">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Genre </th>
+      <th mat-header-cell *matHeaderCellDef > Genre </th>
       <td mat-cell *matCellDef="let game" > {{game?.genre}} </td>
     </ng-container>
     <!-- Color Column -->
     <ng-container matColumnDef="artist">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Artist </th>
+      <th mat-header-cell *matHeaderCellDef > Artist </th>
       <td mat-cell *matCellDef="let lp" > {{lp?.artist}} </td>
     </ng-container>
 
